[gd_scene load_steps=29 format=3 uid="uid://dej8dwa6y3t55"]

[ext_resource type="Script" path="res://TestPlayer.gd" id="1_8ai5p"]
[ext_resource type="Texture2D" uid="uid://b17p26md36ty6" path="res://Sprites/MegaMan.png" id="2_7lkew"]
[ext_resource type="PackedScene" uid="uid://cvebhfuo1xb35" path="res://StateMachine/state_machine.tscn" id="3_yn72c"]
[ext_resource type="Script" path="res://Player/Idle.gd" id="4_rsn1g"]
[ext_resource type="Script" path="res://Scripts/PlayerMovementData.gd" id="5_kjbax"]
[ext_resource type="Script" path="res://StateMachine/JumpState.gd" id="6_aumog"]
[ext_resource type="Script" path="res://Player/Move.gd" id="6_sbura"]
[ext_resource type="PackedScene" uid="uid://e8tyv6nw01dw" path="res://OtherScenes/camera_2d.tscn" id="9_752fp"]
[ext_resource type="Script" path="res://Player/Slide.gd" id="9_kiqhl"]
[ext_resource type="Script" path="res://Player/MovementComponent.gd" id="10_43urb"]

[sub_resource type="Resource" id="Resource_tk04i"]
script = ExtResource("5_kjbax")
move_speed = 78.0
acceleration = 600.0
friction = 1000.0
jump_velocity = 320.0
gravity_scale = 1.0
air_resistance = 200.0
air_acceleration = 200.0
gravity = 900
max_fall_speed = 360
slide_speed = 160.0

[sub_resource type="Animation" id="Animation_o7lvi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3uww2"]
resource_name = "damaged"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_2tiuv"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="Animation" id="Animation_s8io3"]
resource_name = "idle_shoot"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [116, 117, 116]
}

[sub_resource type="Animation" id="Animation_jynlp"]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_miuw7"]
resource_name = "jump_shoot"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [123]
}

[sub_resource type="Animation" id="Animation_rr78j"]
resource_name = "run"
length = 0.48
loop_mode = 1
step = 0.12
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.12, 0.24, 0.36),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_oeq0a"]
resource_name = "shooting_walk"
length = 0.48
loop_mode = 1
step = 0.12
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.12, 0.24, 0.36),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [119, 120, 121, 122]
}

[sub_resource type="Animation" id="Animation_cn0g5"]
resource_name = "sliding"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}

[sub_resource type="Animation" id="Animation_run7j"]
resource_name = "tip_toe"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_1la8a"]
resource_name = "tip_toe_shoot"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [118]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_erlnu"]
_data = {
"RESET": SubResource("Animation_o7lvi"),
"damaged": SubResource("Animation_3uww2"),
"idle": SubResource("Animation_2tiuv"),
"idle_shoot": SubResource("Animation_s8io3"),
"jump": SubResource("Animation_jynlp"),
"jump_shoot": SubResource("Animation_miuw7"),
"run": SubResource("Animation_rr78j"),
"shooting_walk": SubResource("Animation_oeq0a"),
"sliding": SubResource("Animation_cn0g5"),
"tip_toe": SubResource("Animation_run7j"),
"tip_toe_shoot": SubResource("Animation_1la8a")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_46gj7"]
size = Vector2(11, 20)

[sub_resource type="Resource" id="Resource_ltdcr"]
script = ExtResource("5_kjbax")
move_speed = 78.0
acceleration = 600.0
friction = 1000.0
jump_velocity = 320.0
gravity_scale = 1.0
air_resistance = 200.0
air_acceleration = 200.0
gravity = 900
max_fall_speed = 360
slide_speed = 160.0

[sub_resource type="Resource" id="Resource_2hbsh"]
script = ExtResource("5_kjbax")
move_speed = 78.0
acceleration = 600.0
friction = 1000.0
jump_velocity = 320.0
gravity_scale = 1.0
air_resistance = 200.0
air_acceleration = 200.0
gravity = 900
max_fall_speed = 360
slide_speed = 160.0

[sub_resource type="Resource" id="Resource_gagaf"]
script = ExtResource("5_kjbax")
move_speed = 78.0
acceleration = 600.0
friction = 1000.0
jump_velocity = 320.0
gravity_scale = 1.0
air_resistance = 200.0
air_acceleration = 200.0
gravity = 900
max_fall_speed = 360
slide_speed = 160.0

[sub_resource type="Resource" id="Resource_8te84"]
script = ExtResource("5_kjbax")
move_speed = 78.0
acceleration = 600.0
friction = 1000.0
jump_velocity = 320.0
gravity_scale = 1.0
air_resistance = 200.0
air_acceleration = 200.0
gravity = 900
max_fall_speed = 360
slide_speed = 160.0

[node name="TestPlayer" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_8ai5p")
movement_data = SubResource("Resource_tk04i")

[node name="MegaManSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_7lkew")
hframes = 116
vframes = 16

[node name="CharacterAnimator" type="AnimationPlayer" parent="."]
root_node = NodePath("../MegaManSprite")
libraries = {
"": SubResource("AnimationLibrary_erlnu")
}

[node name="NormalCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_46gj7")

[node name="SlideCollision" type="CollisionShape2D" parent="."]
position = Vector2(1, 8)
scale = Vector2(2, 0.5)
shape = SubResource("RectangleShape2D_46gj7")
disabled = true

[node name="Camera2D" parent="." instance=ExtResource("9_752fp")]
position = Vector2(0, 0)

[node name="StateMachine" parent="." node_paths=PackedStringArray("init_state") instance=ExtResource("3_yn72c")]
init_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("jump_state", "move_state", "slide_state")]
script = ExtResource("4_rsn1g")
jump_state = NodePath("../Jump")
move_state = NodePath("../Move")
slide_state = NodePath("../Slide")
movement_data = SubResource("Resource_ltdcr")
animation_name = "idle"

[node name="Move" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "jump_state", "slide_state")]
script = ExtResource("6_sbura")
idle_state = NodePath("../Idle")
jump_state = NodePath("../Jump")
slide_state = NodePath("../Slide")
movement_data = SubResource("Resource_2hbsh")
animation_name = "run"

[node name="Jump" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "move_state")]
script = ExtResource("6_aumog")
idle_state = NodePath("../Idle")
move_state = NodePath("../Move")
movement_data = SubResource("Resource_gagaf")
animation_name = "jump"

[node name="Slide" type="Node" parent="StateMachine" node_paths=PackedStringArray("slide_state", "idle_state", "move_state", "jump_state")]
script = ExtResource("9_kiqhl")
slide_state = NodePath(".")
idle_state = NodePath("../Idle")
move_state = NodePath("../Move")
jump_state = NodePath("../Jump")
slide_time = 0.4
movement_data = SubResource("Resource_8te84")
animation_name = "sliding"

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("10_43urb")

[node name="CeilingCast" type="RayCast2D" parent="."]
position = Vector2(0, 3)
target_position = Vector2(0, -6)
